# echo-ai

./: .gitignore  README.md  pyproject.toml
configs/: runtime.yaml
docs/adr/: ADR-0001-runtime.md
docs/architecture/: runtime.md
echo/application/chat/: session.py
echo/bootstrap/: __main__.py  runtime.py
echo/config/: __init__.py  manager.py  reader.py  schema.py
echo/event/: event.py  subscriber.py
echo/llm/: __init__.py  enums.py  exceptions.py  message.py  provider.py  response.py  test_exceptions.py
echo/llm/backends/: __init__.py  client.py  config.py  factory.py  openai.py
echo/logger/: __init__.py  manager.py
echo/memory/: __init__.py  manager.py  message_window.py  models.py  profile.py  summarizer.py  summary.py
echo/presentation/cli/: __init__.py  console.py
echo/prompt/: __init__.py  builder.py  context.py  loader.py  service.py  system.md
echo/runtime/: lifecycle.py  module.py  runtime.py  service_registry.py
tests/: manual_stream.py
tests/application/chat/: test_session.py
tests/config/: test_manager.py  test_reader.py
tests/event/: test_event.py
tests/llm/: test_factory.py  test_models.py
tests/logger/: test_logger.py
tests/memory/: test_memory_manager.py  test_message_window.py
tests/runtime/: test_runtime.py
