[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-ai"
version = "0.1.0-alpha"
description = "Project ECHO - A local AI runtime."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "InahoNeko" }
]

dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["echo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]